@@ -37,8 +37,10 @@ import ee.ria.xroad.common.conf.globalconf.sharedparameters.v3.SecurityServerTyp
 import ee.ria.xroad.common.conf.globalconf.sharedparameters.v3.SharedParametersTypeV3;
 import ee.ria.xroad.common.conf.globalconf.sharedparameters.v3.SubsystemType;
 import ee.ria.xroad.common.identifier.ClientId;
+import ee.ria.xroad.common.util.CryptoUtils;
 
 import jakarta.xml.bind.JAXBElement;
+import lombok.SneakyThrows;
 import org.mapstruct.Context;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -49,8 +51,6 @@ import org.mapstruct.factory.Mappers;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import static java.util.stream.Collectors.toList;
 
 @Mapper(uses = {ObjectFactory.class, MappingUtils.class}, unmappedTargetPolicy = ReportingPolicy.ERROR)
 
@@ -69,6 +69,7 @@ abstract class SharedParametersV3Converter {
     @Mapping(source = "securityServers", target = "securityServer")
     @Mapping(source = "globalGroups", target = "globalGroup")
     @Mapping(target = "centralService", ignore = true)
+    @Mapping(target = "any", ignore = true)
     abstract SharedParametersTypeV3 convert(SharedParameters sharedParameters,
                                             @Context Map<ClientId, Object> clientMap);
 
@@ -82,7 +83,7 @@ abstract class SharedParametersV3Converter {
     @Mapping(source = "intermediateCAs", target = "intermediateCA")
     abstract ApprovedCATypeV3 convert(SharedParameters.ApprovedCA approvedCa);
 
-    @Mapping(source = "authCertHashes", target = "authCertHash")
+    @Mapping(source = "authCerts", target = "authCertHash", qualifiedByName = "toAuthCertHashes")
     @Mapping(source = "clients", target = "client", qualifiedByName = "clientsById")
     @Mapping(target = "owner", qualifiedByName = "clientById")
     abstract SecurityServerType convert(SharedParameters.SecurityServer securityServer, @Context Map<ClientId, Object> clientMap);
@@ -113,7 +114,19 @@ abstract class SharedParametersV3Converter {
         }
         return clientIds.stream()
                 .map(clientId -> OBJECT_FACTORY.createSecurityServerTypeClient(xmlClientId(clientId, clientMap)))
-                .collect(toList());
+                .toList();
+    }
+
+    @Named("toAuthCertHashes")
+    protected List<byte[]> toAuthCertHashes(List<byte[]> authCerts) {
+        return authCerts.stream()
+                .map(this::toAuthCertHash)
+                .toList();
+    }
+
+    @SneakyThrows
+    private byte[] toAuthCertHash(byte[] authCert) {
+        return CryptoUtils.certHash(authCert);
     }
 
     private Map<ClientId, Object> createClientIdMap(SharedParameters sharedParameters) {
